Fixed seo fixed page in dark mode fixed images

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,7 +20,7 @@ $color-dark-alt: #252628;
 
 // Colors - Text
 $color-text-primary: #17181c;
-$color-text-secondary: #75767c;
+$color-text-secondary: #63656c;
 $color-text-muted: #707275;
 $color-text-light: #899aab;
 $color-text-disabled: #a6a8b2;
